<resources>
    <string name="app_name">山田音乐</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="menu_action_bar_search">搜索</string>
    <string name="menu_action_bar_collection">喜欢</string>
    <string name="menu_action_bar_option">设置</string>
    <string name="menu_action_bar_about">关于</string>
    <string name="menu_action_bar_exit">退出</string>
    <string name="nav_item_music">我的音乐</string>
    <string name="nav_item_option">设置</string>
    <string name="nav_item_exit">退出</string>
    <string name="nav_group">系统</string>
    <string name="nav_item_design">主题换肤</string>
    <string name="nav_item_night">夜间模式</string>
    <string name="nav_item_listen">听歌识曲</string>
    <string name="nav_item_custom">定时播放</string>
    <string name="main_under_image">歌手头像</string>
    <string name="main_under_music_name">歌曲名称</string>
    <string name="main_under_singer_name">歌手名称</string>
    <string name="main_under_action_image">播放/暂停</string>
    <string name="main_under_next_image">下一首</string>
    <string name="menu_tab_my_music">我的音乐</string>
    <string name="menu_tab_lib_music">音乐库</string>
    <string name="menu_tab_ranking_music">音乐榜</string>
    <string name="play_header_music_name">歌曲名称</string>
    <string name="play_header_singer_name">歌手名称</string>
    <string name="play_header_menu_desc">菜单</string>
    <string name="play_under_music_front_desc">上一首</string>
    <string name="play_under_music_play_desc">播放/暂停</string>
    <string name="play_under_music_next_desc">下一首</string>
    <string name="play_under_music_mode_desc">播放模式</string>
    <string name="play_under_music_list_desc">播放列表</string>
    <string name="transition_singer_name">歌手名称过渡标签</string>
    <string name="transition_singer_icon">歌手头像过渡标签</string>
    <string name="nav_item_search">扫描歌曲</string>
    <string name="my_music_index_item_image">索引子项图片</string>
    <string name="main_index_local_music_text">本地音乐</string>
    <string name="main_index_lately_music_text">最近播放</string>
    <string name="main_index_like_music_text">我喜欢的</string>
    <string name="music_dialog_title">歌曲详情</string>
    <string name="music_message_name">歌曲名称：</string>
    <string name="music_message_singer">歌手名称：</string>
    <string name="music_message_album">专辑名称：</string>
    <string name="music_message_size">歌曲大小：</string>
    <string name="music_message_duration">歌曲时长：</string>
    <string name="music_handle_menu">操作菜单</string>
    <string name="music_handle_menu_delete">删除</string>
    <string name="music_handle_menu_message">详情</string>
    <string name="start_search_music">全盘扫描</string>
    <string name="music_add_like">喜欢</string>
    <string name="music_add_liked">已喜欢</string>
    <string name="success_add_like">已加入喜欢</string>
    <string name="success_remove_like">已取消喜欢</string>
    <string name="play_music_dialog">播放列表</string>
    <string name="play_list_title">播放列表</string>
    <string name="play_list_clear">清空</string>
    <string name="play_list_delete">从列队删除</string>
    <string name="time_text_init">00:00</string>
    <string name="mode_list_loop">列表循环</string>
    <string name="mode_single_loop">单曲循环</string>
    <string name="mode_list_play">顺序播放</string>
    <string name="mode_random">随机播放</string>
    <string name="exitHint">再按一次退出程序</string>
    <string name="play_list_under_line">—</string>
    <string name="add_play_list">添加进播放列表</string>
    <string name="number">00</string>
    <string name="search_image">扫描背景图片</string>
    <string name="start_custom_search">自定义扫描</string>
    <string name="option_search">扫描设置</string>
    <string name="add_like_list">已加入喜欢</string>
    <string name="search_clear">扫描完成</string>
    <string name="search_fail">已取消扫描</string>
    <string name="cancel">取消</string>
    <string name="dialog_title_hint">歌曲名</string>
    <string name="dialog_title_name">歌曲：</string>
    <string name="dialog_icon">弹出框图标</string>
    <string name="dialog_next">下一首播放</string>
    <string name="dialog_like">喜欢</string>
    <string name="dialog_delete">删除</string>
    <string name="dialog_artist">歌手：</string>
    <string name="dialog_album">专辑：</string>
    <string name="dialog_info">查看歌曲信息</string>
    <string name="message_file_name">文件名称：</string>
    <string name="message_time">播放时长：</string>
    <string name="message_file_size">文件大小：</string>
    <string name="message_file_path">文件路径：</string>
    <string name="play_all">播放所有</string>
    <string name="play_all_text">播放全部歌曲</string>
    <string name="play_edit_choose">批选</string>
    <string name="player_animation">唱片动画</string>
    <string name="explode_order">爆炸顺序</string>
</resources>
