<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_action_bar_search"
        android:icon="@drawable/main_icon_search"
        android:title="@string/menu_action_bar_search"
        app:showAsAction="ifRoom|collapseActionView" />

    <!--<item android:title="@string/menu_action_bar_collection"-->
        <!--android:icon="@drawable/main_icon_like"-->
        <!--android:id="@+id/menu_action_bar_collection"-->
        <!--app:showAsAction="ifRoom"/>-->

    <item android:id="@+id/menu_action_bar_option"
        android:title="@string/menu_action_bar_option"/>

    <item android:id="@+id/menu_action_bar_about"
        android:title="@string/menu_action_bar_about"/>

    <item android:id="@+id/menu_action_bar_exit"
        android:title="@string/menu_action_bar_exit"/>

</menu>