<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_play_bg"
    android:paddingBottom="6dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="6dp">

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="6dp"
        android:src="@drawable/ic_launcher"
        android:id="@+id/main_under_image"
        android:contentDescription="@string/main_under_image"
        android:transitionName="@string/transition_singer_icon"/>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:paddingTop="3dp"
        android:id="@+id/main_under_desc">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:textSize="16sp"
            android:textColor="@color/under_text_color"
            android:text="@string/main_under_music_name"
            android:id="@+id/main_under_music_name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:textSize="14sp"
            android:textColor="@color/under_text_color"
            android:layout_below="@id/main_under_music_name"
            android:text="@string/main_under_singer_name"
            android:id="@+id/main_under_singer_name"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="3"
        android:paddingTop="6dp"
        android:paddingStart="12dp"
        android:paddingEnd="1dp"
        android:transitionName="@string/transition_singer_name"
        android:id="@+id/main_under_action">

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="14dp"
            android:background="@android:color/transparent"
            android:src="@drawable/under_main_list"
            android:id="@+id/main_under_list_image"
            android:contentDescription="@string/main_under_action_image"/>

        <ImageButton
            android:layout_width="36dp"
            android:layout_height="40dp"
            android:layout_marginEnd="3dp"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:src="@drawable/under_main_play"
            android:id="@+id/main_under_action_image"
            android:contentDescription="@string/main_under_action_image"/>

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="4dp"
            android:background="@android:color/transparent"
            android:src="@drawable/under_main_next"
            android:id="@+id/main_under_next_image"
            android:contentDescription="@string/main_under_next_image"/>

    </LinearLayout>

</LinearLayout>