<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_play_bg"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/play_under_music_state">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:textAlignment="center"
            android:paddingTop="1.4dp"
            android:textSize="12sp"
            android:id="@+id/play_under_music_time_now"
            android:text="@string/time_text_init"/>

        <SeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/play_under_music_bar"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:textAlignment="center"
            android:paddingTop="1.4dp"
            android:textSize="12sp"
            android:id="@+id/play_under_music_time_all"
            android:text="@string/time_text_init"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/play_under_music_state"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="10dp"
        android:transitionName="@string/transition_singer_name">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:id="@+id/play_under_music_mode"
            android:src="@drawable/play_under_music_mode_one_list"
            android:contentDescription="@string/play_under_music_mode_desc"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:id="@+id/play_under_music_front"
            android:src="@drawable/play_under_music_front"
            android:contentDescription="@string/play_under_music_front_desc"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:id="@+id/play_under_music_play"
            android:src="@drawable/play_under_music_play"
            android:contentDescription="@string/play_under_music_play_desc"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:id="@+id/play_under_music_next"
            android:src="@drawable/play_under_music_next"
            android:contentDescription="@string/play_under_music_next_desc"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:id="@+id/play_under_music_list"
            android:src="@drawable/play_under_music_list"
            android:contentDescription="@string/play_under_music_list_desc"/>

    </LinearLayout>

</RelativeLayout>