<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_under_action"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="2.8"
    android:orientation="horizontal"
    android:transitionName="@string/transition_singer_name"
    tools:showIn="@layout/activity_main_under">

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.3"/>

    <ImageButton
        android:id="@+id/main_under_list_image"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/main_under_action_image"
        android:scaleType="fitCenter"
        android:src="@drawable/under_main_list" />

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.3"/>

    <ImageButton
        android:id="@+id/main_under_action_image"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/main_under_action_image"
        android:padding="2dp"
        android:scaleType="fitCenter"
        android:src="@drawable/animvectordrawable_music" />

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.3"/>

    <ImageButton
        android:id="@+id/main_under_next_image"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.6"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/main_under_next_image"
        android:scaleType="fitCenter"
        android:src="@drawable/under_main_next" />

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.4"/>

</LinearLayout>